# Advanced_CPP_CodeBase

Build Systems/: CMakeLists.txt
Build Systems/Calculator_app/include/: Calculator.h
Build Systems/Calculator_app/src/: Calculator.cpp
Build Systems/maths/: CMakeLists.txt
Build Systems/maths/include/: maths.h
Build Systems/maths/src/: math.cpp
Build Systems/physics/: CMakeLists.txt
Build Systems/physics/include/: physics.h
Build Systems/physics/src/: physics.cpp
Build Systems/src/: main.cpp
Casting/: static_vs_dynamic_cast.cpp
Multithreading/: Introduction.cpp  MULTITHREADING_CHEATSHEET.md  Parallel_sum.cpp  ProducerConsumer.cpp  ProducerConsumer_Interview.cpp  ProducerConsumer_Semaphore.cpp  ThreadPool.cpp
Multithreading/Multithreading/: ProducerConsumer.cpp
Networking/: CLIENT_SERVER_GUIDE.md  SOCKET_PROGRAMMING_FUNDAMENTALS.html  SOCKET_PROGRAMMING_REFERENCE.md  simpleClient.cpp  simpleServer.cpp
Process IPC/: Consumer.cpp  FileReader.cpp  FileWriter.cpp  MutexConsumer.cpp  MutexProducer.cpp  PIPE_multiple_process.cpp  Producer.cpp  ProducerConsumer_SharedMemory.cpp  Semaphore_IPC.cpp
Smart Pointers/: Difference_shared_vs_unique_ptr.cpp  Unique_pointer_implementation.cpp  cpp_sharedPtr_impl.cpp  cpp_uniquePtr_impl.cpp  shared_pointer_implementation.cpp  weak_pointer_usage.cpp
lvalue, rvalue/: Intro.cpp  Move_semantics.cpp  ravlue nature in perfect forwarding.txt  what exactly is the meaning of passing rval ref.txt
templates/: class_templates.cpp  nested_template.cpp  template_compiler_time.cpp  template_specialization.cpp  template_specialization_example.cpp  templates_container.cpp  templates_decltype.cpp  vector_class_implementation.cpp
